# editeur_3d

./: CMakeLists.txt  LICENCE  README.md  cmake_defines.hpp.in
ext/stb_image/: CMakeLists.txt
res/shaders/: light.vs  texture.fs  textured.frag.glsl  textured.vert.glsl
src/: cmake_defines.hpp  utils.cpp  utils.hpp
src/core/: logger.cpp  logger.hpp
src/renderer/: camera.cpp  camera.hpp  gldebug.cpp  gldebug.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture2d.cpp  texture2d.hpp
src/widgets/: application.cpp  application.hpp  canvas.cpp  canvas.hpp  editor.cpp  editor.hpp  scene_panel.cpp  scene_panel.hpp  tool_bar.cpp  tool_bar.hpp  window_ids.hpp
